# docs/swagger.yaml
@@ -23,7 +23,53 @@ info:
   title: Blog API
   version: "1.0"
 paths:
-  /api/v1/pub/login/captcha:
+  /api/v1/auth:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/models.AuthSwag'
+          type: object
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+      summary: 用户登录 获取token 信息
+      tags:
+      - 用户管理
+  /api/v1/currentuser:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 获取登陆用户信息
+      tags:
+      - 用户管理
+  /api/v1/pub/captcha:
     get:
       parameters:
       - description: 验证码ID
@@ -42,8 +88,8 @@ paths:
             type: string
       summary: 响应图形验证码
       tags:
-      - 登录管理
-  /api/v1/pub/login/captchaid:
+      - 公共接口
+  /api/v1/pub/captchaid:
     get:
       responses:
         "200":
@@ -52,7 +98,7 @@ paths:
             type: string
       summary: 获取验证码信息
       tags:
-      - 登录管理
+      - 公共接口
   /api/v1/tags:
     get:
       produces:
@@ -148,31 +194,6 @@ paths:
       summary: 编辑文章标签
       tags:
       - 标签管理
-  /auth:
-    post:
-      consumes:
-      - application/json
-      parameters:
-      - description: body
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/models.AuthSwag'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: string
-        "400":
-          description: Bad Request
-          schema:
-            type: string
-      summary: 用户登录 获取token 信息
-      tags:
-      - 登录管理
 securityDefinitions:
   ApiKeyAuth:
     in: header
