# routers/api/v1/user.go
@@ -1,9 +1,11 @@
-package api
+package v1
 
 import (
 	"blog/models"
 	"github.com/dchest/captcha"
+	"github.com/dgrijalva/jwt-go"
 	"net/http"
+	"strings"
 
 	"github.com/astaxie/beego/validation"
 	"github.com/gin-gonic/gin"
@@ -21,14 +23,20 @@ type auth struct {
 	CaptchaId   string `json:"captcha_id"`
 }
 
+
+type currentUser struct {
+     Id string `json:"id"`
+     Username string `json:"username"`
+}
+
 // @Summary   用户登录 获取token 信息
-// @Tags 登录管理
+// @Tags 用户管理
 // @Accept json
 // @Produce  json
 // @Param   body  body   models.AuthSwag   true "body"
 // @Success 200 {string} gin.Context.JSON
 // @Failure 400 {string} gin.Context.JSON
-// @Router /auth  [POST]
+// @Router /api/v1/auth  [POST]
 func Auth(c *gin.Context) {
 	appG := app.Gin{C: c}
 	var reqInfo auth
@@ -57,8 +65,6 @@ func Auth(c *gin.Context) {
 		return
 	}
 
-	//authService := user_service.User{Username: reqInfo.Username, Password: reqInfo.Password}
-	//isExist, err := authService.Check()
 	isExist, user, err := models.LoginCheck(reqInfo.Username, util.EncodeMD5(reqInfo.Password))
 	if err != nil {
 		appG.Response(http.StatusInternalServerError, e.ERROR_AUTH_CHECK_TOKEN_FAIL, nil)
@@ -78,4 +84,55 @@ func Auth(c *gin.Context) {
 	appG.Response(http.StatusOK, e.SUCCESS, map[string]string{
 		"token": token,
 	})
+}
+
+// @Summary    获取登陆用户信息
+// @Tags 用户管理
+// @Accept json
+// @Produce  json
+// @Security ApiKeyAuth
+// @Success 200 {string} gin.Context.JSON
+// @Failure 400 {string} gin.Context.JSON
+// @Router  /api/v1/currentuser   [GET]
+func CurrentUser(c *gin.Context){
+	var code int
+	var data interface{}
+	var user currentUser
+
+	code = e.SUCCESS
+	Authorization := c.GetHeader("Authorization") //在header中存放token
+	token := strings.Split(Authorization, " ")
+	//token := c.Query("token")
+	if Authorization == "" {
+		code = e.INVALID_PARAMS
+	} else {
+		claims, err := util.ParseToken(token[0])
+		if err != nil {
+			switch err.(*jwt.ValidationError).Errors {
+			case jwt.ValidationErrorExpired:
+				code = e.ERROR_AUTH_CHECK_TOKEN_TIMEOUT
+			default:
+				code = e.ERROR_AUTH_CHECK_TOKEN_FAIL
+			}
+		}
+		user.Id = claims.Id
+		user.Username = claims.Username
+	}
+
+	if code != e.SUCCESS {
+		c.JSON(http.StatusUnauthorized, gin.H{
+			"code": code,
+			"msg":  e.GetMsg(code),
+			"data": data,
+		})}else{
+		c.JSON(http.StatusOK, gin.H{
+			"code": code,
+			"msg":  e.GetMsg(code),
+			"data": user,
+		})
+
+	}
+
+
+
 }
